--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,5 +1,16 @@
+<style>
+    pre.example {
+        background-color: #EBEDED;
+        margin: 5px;
+        padding: 3px;
+        border: solid 1px #737370;
+        border-radius: 3px;
+        --webkit-border-radius: 3px;
+        width: 166px;
+    }
+</style>
 <p>
-    Sophia's drones are simple and can recognize symbols in a word only as a digit or a letter.
+    Sophia's drones are too simple and can recognize symbols in a word only as a digit or a letter.
     She wants to learn drones to understand commands that are represented as "words" consisted by letters and digits.
     For that Sophia uploaded "patterns" which describe the sequence of digits and letters in the command.
     But drone memory can store only integer numbers and convert it in binary format for comparing.
@@ -8,7 +19,7 @@
 
 <p>
     You are given a pattern as a positive integer and a command as a word.
-    For the comparing drone should convert integer pattern in binary form, add zeroes to left for the command length and
+    For the comparing drone should convert integer pattern in binary form, append zeroes to left for the command length and
     compare this combination with the command.<br>
     <strong>1 is a letter. 0 is a digit.</strong><br>
     If the pattern and the command are coincided, then return True, else -- False.
@@ -18,20 +29,18 @@
     For example. The pattern is 42 and the command is "12a0b3e4".<br>
     42 == 101010 in binary form, but this is not enough of length. Let's append zeroes -- "00101010".
     Then compare:
-    <pre class="brush: text">
+    <pre class="example">
       42 == 00101010
 12a0b3e4 == DDLDLDLD
 --------------------
-    True    VVVVVVVV
-    </pre>
+    True    VVVVVVVV</pre>
 
     One more example -- 101 and "ab23b4zz":
-    <pre class="brush: text">
+    <pre class="example">
      101 == 01100101
 ab23b4zz == LLDDLDLL
 --------------------
-   False    XVXVXXXV
-    </pre>
+   False    XVXVXXXV</pre>
 </div>
 
 <p>
@@ -49,12 +58,19 @@ ab23b4zz == LLDDLDLL
         <strong>Example:</strong>
     </p>
     <pre class="brush: python">
-check_pattern(42, "12a0b3e4") == True
-check_pattern(101, "ab23b4zz") == False
+check_command(42, "12a0b3e4") == True
+check_command(101, "ab23b4zz") == False
     </pre>
 </div>
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
+    In this mission you can learn how to store more complex data in simple numbers and how to work with simple patterns.
+    You can expand this concept and use more complex patterns (think about another number systems).
+</p>
 
+
+<p>
+    <strong>Precondition:</strong> 0 &le; pattern < 2<sup>32</sup><br>
+    0 < |command| < 32
 </p>
