--- a/info/task_description.html
+++ b/info/task_description.html
@@ -72,5 +72,6 @@ check_command(101, "ab23b4zz") == False
 
 <p>
     <strong>Precondition:</strong> 0 &le; pattern < 2<sup>32</sup><br>
-    0 < |command| < 32
+    0 < len(command) < 32<br>
+    "command" contains only ASCII letters or digits.
 </p>
