--- a/info/task_description.html
+++ b/info/task_description.html
@@ -10,17 +10,19 @@
     }
 </style>
 <p>
-    Sophia's drones are too simple and can recognize symbols in a word only as a digit or a letter.
-    She wants to learn drones to understand commands that are represented as "words" consisted by letters and digits.
-    For that Sophia uploaded "patterns" which describe the sequence of digits and letters in the command.
-    But drone memory can store only integer numbers and convert it in binary format for comparing.
-    We should help Sophia and write module for comparing pattern and command.
+    Sophia's drones are too simple and can recognize symbols in only single words,
+    digits or letters.
+    She wants to teach the drones to understand basic commands which are represented as "words" consisted by letters and digits.
+    For that, Sophia has uploaded "patterns," which describe the sequence of digits and letters in the command.
+    Unfortunately, the drones memory can only store integers and convert them into binary format for comparison.
+    We should help Sophia to write a module for the comparison of patterns and commands.
+
 </p>
 
 <p>
     You are given a pattern as a positive integer and a command as a word.
-    For the comparing drone should convert integer pattern in binary form, append zeroes to left for the command length and
-    compare this combination with the command.<br>
+    For the comparison, the drone should convert the integer pattern into binary form,
+    append zeros to left for the command length and compare this combination with the command.<br>
     <strong>1 is a letter. 0 is a digit.</strong><br>
     If the pattern and the command are coincided, then return True, else -- False.
 </p>
