--- a/info/task_description.html
+++ b/info/task_description.html
@@ -73,7 +73,7 @@ check_command(101, "ab23b4zz") == False
 
 
 <p>
-    <strong>Precondition:</strong> 0 &le; pattern < 2<sup>31</sup><br>
-    0 < len(command) < 32<br>
+    <strong>Precondition:</strong> 0 &le; pattern &lt; 2<sup>31</sup><br>
+    0 &lt; len(command) &lt; 32<br>
     "command" contains only ASCII letters or digits.
 </p>
